Bug 66461 - identify spacer images and don't spend time scaling/drawing. r=dr, sr=blizzard, a=asa